--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 streamlit>=1.29.0
-streamlit-authenticator>=0.3.0
 yfinance>=0.2.33
 plotly>=5.18.0
 pandas>=2.0.0
@@ -10,3 +9,7 @@ beautifulsoup4>=4.12.0
 matplotlib>=3.7.0
 nsepython>=0.5
 PyYAML>=6.0
+# Auth0 authentication
+authlib>=1.3.0
+python-dotenv>=1.0.0
+httpx>=0.25.0
