--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,8 @@ PyYAML>=6.0
 authlib>=1.3.0
 python-dotenv>=1.0.0
 httpx>=0.25.0
+# PMS Analyzer
+pdfplumber>=0.10.0
+python-dateutil>=2.8.2
+click>=8.1.0
+tabulate>=0.9.0
